--- a/login/login.html
+++ b/login/login.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap Icons for Google icon -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-        
     <div class="container">
         <div class="container-form">
-            <form class="sign-in">
+            <form class="sign-in" id="sign-in-form">
                 <h2>Iniciar Sesión</h2>
                 <div class="social-networks">
-                    <ion-icon name="logo-twitch"></ion-icon>
-                    <ion-icon name="logo-twitter"></ion-icon>
-                    <ion-icon name="logo-instagram"></ion-icon>
-                    <ion-icon name="logo-tiktok"></ion-icon>
+                    <i class="bi bi-google" id="google-sign-in"></i>
                 </div>
                 <span>Use su correo y contraseña</span>
                 <div class="container-input">
-                    <ion-icon name="mail-outline"></ion-icon>
+                    <i class="bi bi-envelope"></i>
                     <input type="text" placeholder="Email">
                 </div>
                 <div class="container-input">
-                    <ion-icon name="lock-closed-outline"></ion-icon>
+                    <i class="bi bi-lock"></i>
                     <input type="password" placeholder="Password">
                 </div>
                 <a href="#">¿Olvidaste tu contraseña?</a>
-                <button class="button">INICIAR SESIÓN</button>
+                <button type="submit" class="button">INICIAR SESIÓN</button>
             </form>
         </div>
 
@@ -36,25 +34,22 @@
             <form class="sign-up">
                 <h2>Registrarse</h2>
                 <div class="social-networks">
-                    <ion-icon name="logo-twitch"></ion-icon>
-                    <ion-icon name="logo-twitter"></ion-icon>
-                    <ion-icon name="logo-instagram"></ion-icon>
-                    <ion-icon name="logo-tiktok"></ion-icon>
+                    <i class="bi bi-google" id="google-sign-up"></i>
                 </div>
                 <span>Use su correo electrónico para registrarse</span>
                 <div class="container-input">
-                    <ion-icon name="person-outline"></ion-icon>
+                    <i class="bi bi-person"></i>
                     <input type="text" placeholder="Nombre">
                 </div>
                 <div class="container-input">
-                    <ion-icon name="mail-outline"></ion-icon>
+                    <i class="bi bi-envelope"></i>
                     <input type="text" placeholder="Email">
                 </div>
                 <div class="container-input">
-                    <ion-icon name="lock-closed-outline"></ion-icon>
+                    <i class="bi bi-lock"></i>
                     <input type="password" placeholder="Password">
                 </div>
-                <button class="button" >REGISTRARSE</button>
+                <button type="submit" class="button">REGISTRARSE</button>
             </form>
         </div>
 
@@ -70,12 +65,8 @@
                 <button class="button" id="btn-sign-in">Iniciar Sesión</button>
             </div>
         </div>
-
     </div>
 
-
     <script src="script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
