--- a/login/login.html
+++ b/login/login.html
@@ -7,8 +7,36 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons for Google icon -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
 </head>
 <body>
+    <script>
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyChssYWkaV_YlH_ZPW4bdvNKlDS5TaHPZU",
+  authDomain: "edutech-ad4f9.firebaseapp.com",
+  projectId: "edutech-ad4f9",
+  storageBucket: "edutech-ad4f9.firebasestorage.app",
+  messagingSenderId: "493756404164",
+  appId: "1:493756404164:web:28a89511bd0dfa2ca45491",
+  measurementId: "G-YDKN6WY7CQ"
+};
+        // Inicializa Firebase
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Redirigir si el usuario ya está autenticado
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                console.log("¡Usuario logueado!", user.email);
+                window.location.href = "panel.html";
+            } else {
+                console.log("No hay usuario logueado.");
+            }
+        });
+    </script>
     <div class="container">
         <div class="container-form">
             <form class="sign-in" id="sign-in-form">
@@ -19,11 +47,11 @@
                 <span>Use su correo y contraseña</span>
                 <div class="container-input">
                     <i class="bi bi-envelope"></i>
-                    <input type="text" placeholder="Email">
+                    <input type="email" id="signin-email" placeholder="Email" required>
                 </div>
                 <div class="container-input">
                     <i class="bi bi-lock"></i>
-                    <input type="password" placeholder="Password">
+                    <input type="password" id="signin-password" placeholder="Password" required>
                 </div>
                 <a href="#">¿Olvidaste tu contraseña?</a>
                 <button type="submit" class="button">INICIAR SESIÓN</button>
@@ -31,7 +59,7 @@
         </div>
 
         <div class="container-form">
-            <form class="sign-up">
+            <form class="sign-up" id="sign-up-form">
                 <h2>Registrarse</h2>
                 <div class="social-networks">
                     <i class="bi bi-google" id="google-sign-up"></i>
@@ -39,15 +67,15 @@
                 <span>Use su correo electrónico para registrarse</span>
                 <div class="container-input">
                     <i class="bi bi-person"></i>
-                    <input type="text" placeholder="Nombre">
+                    <input type="text" id="signup-name" placeholder="Nombre">
                 </div>
                 <div class="container-input">
                     <i class="bi bi-envelope"></i>
-                    <input type="text" placeholder="Email">
+                    <input type="email" id="signup-email" placeholder="Email" required>
                 </div>
                 <div class="container-input">
                     <i class="bi bi-lock"></i>
-                    <input type="password" placeholder="Password">
+                    <input type="password" id="signup-password" placeholder="Password" required>
                 </div>
                 <button type="submit" class="button">REGISTRARSE</button>
             </form>
