Commit con todo el proyecto EduTech

--- a/Dashboard/panel.html
+++ b/Dashboard/panel.html
@@ -27,7 +27,7 @@
             <a href="graficas.html" class="nav-link">Gráficas</a>
         </nav>
         <div class="signout">
-            <a href="#">Regresar</a>
+            <a href="/index.html">Regresar</a>
         </div>
     </div>
     <div class="main-content">
