--- a/index.html
+++ b/index.html
@@ -1,57 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Bootstrap Icons for Google icon -->
+    <!-- Bootstrap Icons for Google and eye icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
-</head>
-<body>
-    <script>
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyChssYWkaV_YlH_ZPW4bdvNKlDS5TaHPZU",
-  authDomain: "edutech-ad4f9.firebaseapp.com",
-  projectId: "edutech-ad4f9",
-  storageBucket: "edutech-ad4f9.firebasestorage.app",
-  messagingSenderId: "493756404164",
-  appId: "1:493756404164:web:28a89511bd0dfa2ca45491",
-  measurementId: "G-YDKN6WY7CQ"
-};
-        // Inicializa Firebase
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
 
-        // Redirigir si el usuario ya está autenticado
-        auth.onAuthStateChanged(user => {
-            if (user) {
-                console.log("¡Usuario logueado!", user.email);
-                window.location.href = "panel.html";
-            } else {
-                console.log("No hay usuario logueado.");
-            }
-        });
-    </script>
+</head>
+
+<body>
     <div class="container">
         <div class="container-form">
             <form class="sign-in" id="sign-in-form">
                 <h2>Iniciar Sesión</h2>
                 <div class="social-networks">
-                    <i class="bi bi-google" id="google-sign-in"></i>
+                    <i class="bi bi-google" id="google-sign-in" style="cursor: pointer; font-size: 1.5em;"></i>
                 </div>
-                <span>Use su correo y contraseña</span>
+                <span>Use su nombre de usuario o correo y contraseña</span>
                 <div class="container-input">
-                    <i class="bi bi-envelope"></i>
-                    <input type="email" id="signin-email" placeholder="Email" required>
+                    <i class="bi bi-person"></i>
+                    <input type="text" id="signin-username" placeholder="Nombre de usuario o Email">
                 </div>
                 <div class="container-input">
                     <i class="bi bi-lock"></i>
-                    <input type="password" id="signin-password" placeholder="Password" required>
+                    <input type="password" id="signin-password" placeholder="Password">
+                    <i class="bi bi-eye" id="signin-toggle-password" style="cursor: pointer;"></i>
                 </div>
                 <a href="#">¿Olvidaste tu contraseña?</a>
                 <button type="submit" class="button">INICIAR SESIÓN</button>
@@ -62,7 +38,7 @@ const firebaseConfig = {
             <form class="sign-up" id="sign-up-form">
                 <h2>Registrarse</h2>
                 <div class="social-networks">
-                    <i class="bi bi-google" id="google-sign-up"></i>
+                    <i class="bi bi-google" id="google-sign-up" style="cursor: pointer; font-size: 1.5em;"></i>
                 </div>
                 <span>Use su correo electrónico para registrarse</span>
                 <div class="container-input">
@@ -70,12 +46,26 @@ const firebaseConfig = {
                     <input type="text" id="signup-name" placeholder="Nombre">
                 </div>
                 <div class="container-input">
+                    <i class="bi bi-person-circle"></i>
+                    <input type="text" id="signup-username" placeholder="Nombre de usuario">
+                </div>
+                <div class="container-input">
                     <i class="bi bi-envelope"></i>
-                    <input type="email" id="signup-email" placeholder="Email" required>
+                    <input type="text" id="signup-email" placeholder="Email">
                 </div>
                 <div class="container-input">
                     <i class="bi bi-lock"></i>
-                    <input type="password" id="signup-password" placeholder="Password" required>
+                    <input type="password" id="signup-password" placeholder="Password">
+                    <i class="bi bi-eye" id="signup-toggle-password" style="cursor: pointer;"></i>
+                </div>
+                <div class="password-requirements">
+                    <ul>
+                        <li id="pwd-length">Al menos 8 caracteres</li>
+                        <li id="pwd-uppercase">Una letra mayúscula</li>
+                        <li id="pwd-lowercase">Una letra minúscula</li>
+                        <li id="pwd-number">Un número</li>
+                        <li id="pwd-special">Un carácter especial (@$!%*?&)</li>
+                    </ul>
                 </div>
                 <button type="submit" class="button">REGISTRARSE</button>
             </form>
@@ -97,4 +87,5 @@ const firebaseConfig = {
 
     <script src="script.js"></script>
 </body>
+
 </html>
