--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +7,23 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons for Google and eye icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
+    <!-- Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+        const firebaseConfig = {
+            apiKey: "AIzaSyChssYWkaV_YlH_ZPW4bdvNKlDS5TaHPZU",
+            authDomain: "edutech-ad4f9.firebaseapp.com",
+            projectId: "edutech-ad4f9",
+            storageBucket: "edutech-ad4f9.firebasestorage.app",
+            messagingSenderId: "493756404164",
+            appId: "1:493756404164:web:28a89511bd0dfa2ca45491",
+            measurementId: "G-YDKN6WY7CQ"
+        };
+        // Initialize Firebase
+        initializeApp(firebaseConfig);
+    </script>
+    
 </head>
-
 <body>
     <div class="container">
         <div class="container-form">
@@ -85,7 +98,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
-
 </html>
