--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +22,8 @@
         // Initialize Firebase
         initializeApp(firebaseConfig);
     </script>
-
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
 </head>
-
 <body>
     <div class="container">
         <div class="container-form">
@@ -102,5 +100,4 @@
 
     <script type="module" src="script.js"></script>
 </body>
-
 </html>
