--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         // Initialize Firebase
         initializeApp(firebaseConfig);
     </script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
 </head>
 <body>
     <div class="container">
