--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+<script src="script.js" type="module"></script>
 </body>
 </html>
