--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons for Google and eye icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    
+    <!-- Elimina las etiquetas <script> de Firebase SDK que estaban aquí -->
 </head>
 <body>
     <div class="container">
