--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap Icons for Google and eye icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Elimina las etiquetas <script> de Firebase SDK que estaban aquí -->
+
 </head>
+
 <body>
     <div class="container">
         <div class="container-form">
@@ -83,6 +85,7 @@
         </div>
     </div>
 
-<script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
