--- a/Dashboard/faltas.html
+++ b/Dashboard/faltas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faltas por Grupos</title>
-    <link rel="stylesheet" href="panel.css">
+    <link rel="stylesheet" href="/css/panel.css">
     <!-- Include SheetJS CDN for Excel export -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
@@ -16,7 +16,7 @@
                 <span class="brand-name">Panel Administrativo</span>
             </div>
             <div class="profile">
-                <img src="https://via.placeholder.com/100" alt="Perfil" class="profile-img">
+                <img src="https://via.placeholder.com/80" alt="Perfil" class="profile-img">
                 <p class="profile-name">Abiel Ontiveros</p>
                 <p class="profile-role">Dueño</p>
             </div>
@@ -26,10 +26,9 @@
             <a href="estudiantes.html" class="nav-link">Estudiantes</a>
             <a href="asistencia.html" class="nav-link">Asistencia por Grupos</a>
             <a href="faltas.html" class="nav-link active">Faltas por Grupos</a>
-            <a href="graficas.html" class="nav-link">Gráficas</a>
         </nav>
         <div class="signout">
-            <a href="#">Regresar</a>
+            <a href="/index.html">Regresar</a>
         </div>
     </div>
     <div class="main-content">
