--- a/Dashboard/estudiantes.html
+++ b/Dashboard/estudiantes.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudiantes</title>
-    <link rel="stylesheet" href="panel.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/estudiantes.css">
+
 </head>
 <body>
     <div class="sidebar">
@@ -12,10 +15,9 @@
             <div class="brand">
                 <span class="brand-icon">🏫</span>
                 <span class="brand-name">Panel Administrativo</span>
-                <span class="brand-subname">AOS-TEMA</span>
             </div>
             <div class="profile">
-                <img src="https://via.placeholder.com/100" alt="Perfil" class="profile-img">
+                <img src="https://via.placeholder.com/80" alt="Perfil" class="profile-img">
                 <p class="profile-name">Abiel Ontiveros</p>
                 <p class="profile-role">Dueño</p>
             </div>
@@ -25,27 +27,25 @@
             <a href="estudiantes.html" class="nav-link active">Estudiantes</a>
             <a href="asistencia.html" class="nav-link">Asistencia por Grupos</a>
             <a href="faltas.html" class="nav-link">Faltas por Grupos</a>
-            <a href="graficas.html" class="nav-link">Gráficas</a>
         </nav>
         <div class="signout">
-            <a href="#">Regresar</a>
+            <a href="/index.html">Regresar</a>
         </div>
     </div>
     <div class="main-content">
         <div class="header">
-            <h1>Estudiantes</h1>
+            <h1 class="centered-title">Estudiantes</h1>
             <div class="header-actions">
                 <button class="btn">?</button>
-                <button class="btn">🔔</button>
             </div>
         </div>
         <div class="cards-container">
-            <div class="card">
+            <div class="card full-width-card">
                 <h3>Lista de Estudiantes</h3>
                 <div class="filter-bar">
-                    <input type="text" id="filterInput" placeholder="Filtrar por nombre o grupo...">
+                    <input type="text" id="filterInput" class="form-control" placeholder="Filtrar por nombre o grupo...">
                 </div>
-                <table id="studentTable">
+                <table id="studentTable" class="table table-striped">
                     <thead>
                         <tr><th>ID</th><th>Nombre</th><th>Grupo</th></tr>
                     </thead>
@@ -142,8 +142,8 @@
                     </tbody>
                 </table>
                 <div class="toggle-buttons">
-                    <button id="showMoreButton" class="btn primary">Ver más</button>
-                    <button id="showLessButton" class="btn primary" disabled>Ver menos</button>
+                    <button id="showMoreButton" class="btn btn-primary">Ver más</button>
+                    <button id="showLessButton" class="btn btn-primary" disabled>Ver menos</button>
                 </div>
             </div>
         </div>
@@ -152,6 +152,8 @@
         <button class="btn" onclick="scrollToTop()">↑</button>
         <button class="btn" onclick="scrollToBottom()">↓</button>
     </div>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/estudiantes.js"></script>
 </body>
 </html>
