--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Bootstrap Icons for Google and eye icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
 </head>
-
 <body>
     <div class="container">
         <div class="container-form">
@@ -85,7 +81,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+<script src="script.js" type="module"></script>
 </body>
-
 </html>
